add link to types

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-beta.8",
   "description": "JSON OT database backend",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "dependencies": {
     "arraydiff": "^0.1.1",
     "async": "^1.4.2",
